--- a/src/components/UI/Menu/Menu.module.css
+++ b/src/components/UI/Menu/Menu.module.css
@@ -1,5 +1,5 @@
 .Logo {
-    background: purple;
+    background: #6c52c0;
     color: white;
     font-family: 'Mansalva', cursive;
     padding: 10px;
