--- a/src/components/Pages/Sirius/Sirius.module.css
+++ b/src/components/Pages/Sirius/Sirius.module.css
@@ -1,4 +1,8 @@
 .Sirius{
-    height: 80vh;
+    height: 75vh;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
