--- a/src/components/Pages/Sirius/Sirius.module.css
+++ b/src/components/Pages/Sirius/Sirius.module.css
@@ -6,3 +6,11 @@
     justify-content: center;
     text-align: center;
 }
+
+.Header{
+    display: block;
+}
+
+.ButtonGroup{
+    display:block;
+}
