--- a/src/components/Pages/Sirius/Sirius.module.css
+++ b/src/components/Pages/Sirius/Sirius.module.css
@@ -8,9 +8,16 @@
 }
 
 .Header{
-    display: block;
+    display: flex;
+    align-self: center;
+}
+
+.Grid {
+    display: flex;
+    justify-content: center;
 }
 
 .ButtonGroup{
-    display:block;
+    display: flex;
+    align-self: center;
 }
