--- a/src/components/Pages/About/About.module.css
+++ b/src/components/Pages/About/About.module.css
@@ -1,4 +1,38 @@
 .About{
-    height: 80vh;
+    height: 75vh;
     color: white;
+    width:100%;
+    font-size: 16px;
+    display: flex;
+    top:0;
+    left:0;
+    overflow: auto;
+}
+
+.Left{
+    padding: 1%;
+    display: flex;
+    float: left;
+    width: 65vw;
+    top:0;
+    overflow: auto;
+}
+
+.Right{
+    display: flex;
+    float: right;
+    width: 35vw;
+    padding: 100px;
+    top:0;
+    margin-right: 30px;
+    align-items: center;
+}
+
+.Button{
+    margin-top: 20px;
+    margin-right: 40px;
+}
+
+.Header{
+    display: block;
 }
